// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutocompleteCircularProgress should apply the correct styling and HTML attributes 1`] = `
<span
  aria-label="Loading"
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--centered"
  id="circular-progress-:r0:"
  role="progressbar"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;

exports[`AutocompleteCircularProgress should apply the correct styling and HTML attributes 2`] = `
<span
  aria-label="Loading"
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--centered custom-class-name"
  id="circular-progress-:r0:"
  role="progressbar"
  style="color: white;"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;
